@@ -7,6 +7,8 @@ TODO:
 
 2017.9.7	K.L.	<k.l.lambda@gmail.com>
 
+	+	Pianist/FingeringNavigator: added estimated costs.
+
 	+	Pianist/FingeringNavigator: added choice sequence.
 
 
